done all refinement
